--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint lib",
+    "lint": "eslint .",
     "ci": "npm run lint && npm run test"
   },
   "repository": {
@@ -35,29 +35,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^6.8.0",
     "jest": "^21.2.1",
-    "eslint": "^3.11.0",
     "sinon": "^1.17.3"
-  },
-  "eslintConfig": {
-    "env": {
-      "node": true
-    },
-    "rules": {
-      "strict": 0,
-      "quotes": [
-        1,
-        "single"
-      ],
-      "no-console": 1,
-      "camelcase": 0,
-      "no-underscore-dangle": 0,
-      "no-shadow": 0,
-      "no-multi-spaces": 0,
-      "eqeqeq": 0,
-      "key-spacing": 0,
-      "comma-spacing": 0,
-      "no-unreachable": 1
-    }
   }
 }
